Fix issue with overflow for large code blocks

--- a/css/article.css
+++ b/css/article.css
@@ -55,3 +55,14 @@ article header a:hover {
 	width: 1.2em;
 	height: 1.2em;
 }
+
+article table, article pre {
+	max-width: 100vw;
+	overflow-x: auto;
+}
+
+@media (min-width: 700px) {
+	article table, article pre {
+		max-width: 75vw;
+	}
+}
